--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,18 @@
 *.aux
 *.bbl
 *.blg
+*.bst
+*.gz
 *.log
 *.lof
 *.lot
-*.bst
+*.nav
 *.out
 *.pdf
+*.snm
 *.spl
 *.toc
 *.Rproj
-*.gz
 .Rproj*
 .Rhistory
 *~
